<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_activity"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:weightSum="6.5"
    tools:context=".Activity.PlayingAct">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginLeft="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/score_txt"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_rich"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/scoree"
            android:textColor="#ffffff"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/time_txt"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_wait"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/time"
            android:textColor="#ffffff"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/heart_txt"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_hearts"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/heart"
            android:textColor="#ffffff"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>

    <TextView
        android:id="@+id/que"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="1.5"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/qutionTxt"
        android:textColor="#ffffff"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ans1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_10sdp"
        android:layout_weight="1"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/answerTxt"
        android:textColor="#ffffff"
        android:textSize="@dimen/_18sdp" />

    <TextView
        android:id="@+id/ans2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_10sdp"
        android:layout_weight="1"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/answerTxt"
        android:textColor="#ffffff"
        android:textSize="@dimen/_18sdp" />

    <TextView
        android:id="@+id/ans3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_10sdp"
        android:layout_weight="1"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/answerTxt"
        android:textColor="#ffffff"
        android:textSize="@dimen/_18sdp" />

    <TextView
        android:id="@+id/ans4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_10sdp"
        android:layout_weight="1"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/answerTxt"
        android:textColor="#ffffff"
        android:textSize="@dimen/_18sdp" />
</LinearLayout>