<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_activity"
    android:weightSum="6"
    android:layoutDirection="ltr"
    tools:context=".Activity.MainActivity">



    <TextView
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.75"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/quiz_game"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_35sdp"/>

    <TextView
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.75"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/test_your_abilities"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_35sdp"/>


    <GridLayout
        android:columnCount="2"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:rowCount="2"
        android:padding="@dimen/_14sdp"
        android:layout_weight="4.5"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/play"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            app:cardElevation="@dimen/_8sdp"
            app:cardCornerRadius="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="@dimen/_16sdp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_play_game"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textSize="@dimen/_20sdp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/score"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            app:cardElevation="@dimen/_8sdp"
            app:cardCornerRadius="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="@dimen/_16sdp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_score_board"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="@dimen/_20sdp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/help"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            app:cardElevation="@dimen/_8sdp"
            app:cardCornerRadius="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="@dimen/_16sdp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_information"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="@dimen/_20sdp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/quit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            app:cardElevation="@dimen/_8sdp"
            app:cardCornerRadius="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="@dimen/_16sdp"
                android:orientation="vertical">

                <ImageView
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_logout"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quit"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/_20sdp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </GridLayout>


</LinearLayout>